--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
 <head>
 <title>My first page for GitHub.</title>
 
@@ -6,6 +6,6 @@
 <body>
   <h1> Hello World!</h1>
 
-  <p> My name is mvicendese</p>
+  <p> My name is mvicendese and I have come here for the biscuits. </p>
 
 </html>
